message Hero_msg{
	required int32 uid = 1;
	required int32 point_x = 2;
	required int32 point_y = 3;
} 


message Heart_beat{
	
}

message Login_req{
	required string name = 1;
}

message Connect_req{
	
}

message Login_rsp{
	required bool success = 1;
	required int32 point_x = 2;
	required int32 point_y = 3;	
	required int32 enemy_num = 4;
	required int32 uid = 5;	
}


message Connect_rsp{
	required bool success = 1;
}

message Enemy_msg{
	required int32 uid = 1;
	required int32 point_x = 2;
	required int32 point_y = 3;	
}

message New_enemy{
	required int32 uid = 1;
	required int32 point_x = 2;
	required int32 point_y = 3;		
}

message Game_start{

}